--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
     "react-loader-spinner": "^6.0.0-0",
+    "react-paginate": "^8.1.2",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
